FRONT : token modal fix : wrap word + padding fix on token copy #375

--- a/dashboard/src/app/modules/operator/modules/application-ui/components/application-modal/application-modal.component.scss
+++ b/dashboard/src/app/modules/operator/modules/application-ui/components/application-modal/application-modal.component.scss
@@ -1,5 +1,10 @@
 .token {
-  padding: 10px;
+  padding: 10px 0;
   overflow-y: auto;
   text-align: center;
+  //display: flex;
+  //max-width: 100%;
+  h5 {
+    overflow-wrap: break-word;
+  }
 }
